--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@babel/preset-react": "^7.18.6",
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.9.0",
+    "use-immer": "^0.9.0",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.1"
