--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.9.0",
     "react-tooltip": "^5.20.0",
+    "react-transition-group": "^4.4.5",
     "use-immer": "^0.9.0",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
