--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.9.0",
     "react-tooltip": "^5.20.0",
     "react-transition-group": "^4.4.5",
+    "socket.io-client": "^4.7.2",
     "use-immer": "^0.9.0",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
