--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve",
+    "webpackBuild": "webpack",
+    "previewDist": "node previewDist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +18,12 @@
     "@babel/preset-react": "^7.18.6",
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "dotenv-webpack": "^8.0.1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "html-webpack-harddisk-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
